2019-1/231/users/4206/executions/1810_2571.log
== TEST (2019-06-12 17:46:44) 
-- CODE:
a = input().upper
a = a.replace("A","")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = a.replace("A","")
AttributeError: 'builtin_function_or_method' object has no attribute 'replace'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:49:36) 
-- CODE:
a = input().upper

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = a.replace("A","")
AttributeError: 'builtin_function_or_method' object has no attribute 'replace'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:49:42) 
-- CODE:
a = input().upper
print(a)
-- OUTPUT:
<built-in method upper of str object at 0x7f8c2fb70e48>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:50:05) 
-- CODE:
a = str(input())
print(a)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:50:40) 
-- CODE:
a = str(input()).upper()
a = a.replace("A","")
print(a)
-- OUTPUT:
INSTITUTO_DE_COMPUTCO-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 17:50:52) 
-- CODE:
a = str(input()).upper()
a = a.replace("A","")
print(a)
-- EXECUTION TIME:
0.60823
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
INSTITUTO_DE_COMPUTCO-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..BBBBBBBBBBBBBBBBBBB.CCCCCCCCCCCCCCCCCCCCCCC.BBBBBBBBBBBBBBBBBB..
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:51:17) 
-- CODE:
a = str(input()).upper()
a = a.replace("A","")
print(a)
-- OUTPUT:
INSTITUTO_DE_COMPUTCO-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:56:10) 
-- CODE:
a = str(input())
print(a[0])

-- OUTPUT:
I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:57:34) 
-- CODE:
a = str(input())
for i in range(0,size(a)):
	if(a[i]=="A" or a[i]=="a"):
		a[i]=""
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(0,size(a)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:57:57) 
-- CODE:
a = str(input())
for i in range(0,len(a)):
	if(a[i]=="A" or a[i]=="a"):
		a[i]=""
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a[i]=""
TypeError: 'str' object does not support item assignment
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:00:33) 
-- CODE:
a = str(input())
for i in range(0,len(a)):
	if(a[i]=="A"):
		a[i]= a[i].replace("A","")
	elif(a[i]=="a"):
		a[i]= a[i].replace("a","")
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a[i]= a[i].replace("a","")
TypeError: 'str' object does not support item assignment
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:00:49) 
-- CODE:
a = str(input())
print(a[1])
for i in range(0,len(a)):
	if(a[i]=="A"):
		a[i]= a[i].replace("A","")
	elif(a[i]=="a"):
		a[i]= a[i].replace("a","")
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a[i]= a[i].replace("a","")
TypeError: 'str' object does not support item assignment
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:04:59) 
-- CODE:
a = (input()
print(a[1])
for i in range(0,len(a)):
	if(a[i]=="A"):
		a[i]= a[i].replace("A","")
	elif(a[i]=="a"):
		a[i]= a[i].replace("a","")
		
print(a)

-- ERROR:
File "XXXX", line 2
    print(a[1])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:05:11) 
-- CODE:
a = input()
print(a[1])
for i in range(0,len(a)):
	if(a[i]=="A"):
		a[i]= a[i].replace("A","")
	elif(a[i]=="a"):
		a[i]= a[i].replace("a","")
		
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a[i]= a[i].replace("a","")
TypeError: 'str' object does not support item assignment
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:12:39) 
-- CODE:
a = input()
a = a.split(x)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = a.split(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:12:54) 
-- CODE:
a = input()
a = a.split("x")
print(a)

-- OUTPUT:
['Instituto_de_Computacao-ICOMP-UFAM']
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:13:04) 
-- CODE:
a = input()
a = a.split("x")
print(a)

-- OUTPUT:
['Instituto_de_Computacao-ICOMP-UFAM']
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:13:25) 
-- CODE:
a = input()
a = a.split("x")
print(a)

-- OUTPUT:
['Instituto_de_Computacao-ICOMP-UFAM']
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:19:10) 
-- CODE:
a = input()
a = a.split("a")
print(a)
-- OUTPUT:
['Instituto_de_Comput', 'c', 'o-ICOMP-UFAM']
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:19:35) 
-- CODE:
a = input()
a = a.split("a")
print(a[0]
-- ERROR:
File "XXXX", line 4
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:19:40) 
-- CODE:
a = input()
a = a.split("a")
print(a[0])
-- OUTPUT:
Instituto_de_Comput
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:20:07) 
-- CODE:
a = input()
a = a.split("a")
a = sum(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = sum(a)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:21:34) 
-- CODE:
from numpy import *
a = input()
a = a.split("a")
b = array([])
for i in range(0,size(a)):
	b[0] = b[0]+a[i]
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:21:56) 
-- CODE:
from numpy import *
a = input()
a = a.split("a")
b = array([""])
for i in range(0,size(a)):
	b[0] = b[0]+a[i]
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:22:47) 
-- CODE:
from numpy import *
a = input()
a = a.split("a")
b = array([""])
for i in range(0,size(a)):
	b = b+a[i]
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:22:58) 
-- CODE:
from numpy import *
a = input()
a = a.split("a")
b = ""
for i in range(0,size(a)):
	b = b+a[i]
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:23:13) 
-- CODE:
from numpy import *
a = input()
a = a.split("a")
b = ""
for i in range(0,size(a)):
	b = b+a[i]
	
print(b)
-- EXECUTION TIME:
1.20348
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:23:35) 
-- CODE:
from numpy import *
a = input()
a = a.split("a")
b = ""
for i in range(0,size(a)):
	b = b+a[i]
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:24:10) 
-- CODE:
from numpy import *
a = input()
a = a.split("a")
b = ""
for i in range(0,size(a)):
	b = b+a[i]
	
print(b)
-- EXECUTION TIME:
0.978749
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:26:31) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,size(a)):
	if(a[i]!="A"):
		b = b+a[i]
	elif(a[i]!="a"):
		b = b+a[i]
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:28:49) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,size(a)):
	if(a[i]!="A"):
		b = b+a[i]
	elif(a[i]!="a"):
		b = b+a[i]
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:29:03) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,size(a)):
	if(a[i]!="A"):
		b = b+a[i]
	elif(a[i]!="a"):
		b = b+a[i]
	
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:29:16) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i]!="A"):
		b = b+a[i]
	elif(a[i]!="a"):
		b = b+a[i]
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:30:24) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i]!="A"):
		b = b+a[i]
	elif(a[i]!="a"):
		b = b+a[i]
	elif(a[i]=="A"):
		b = b+""
	elif(a[i]=="a"):
		b = b+""
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:31:23) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i]!="A"):
		b = b+a[i]
	elif(a[i]!="a"):
		b = b+a[i]
	
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:31:38) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i]!="A"):
		b = b+a[i]
	elif(a[i]!="a"):
		b = b+a[i]
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:32:49) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i]!="A"):
		b = b+a[i]
	elif(a[i]!="a"):
		b = b+a[i]
	else:
		b = b+""
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:33:04) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i]!="A"):
		b = b+a[i]
	elif(a[i]!="a"):
		b = b+a[i]
	else:
		b = b+""
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:33:23) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i] !="A"):
		b = b+a[i]
	elif(a[i] !="a"):
		b = b+a[i]
	else:
		b = b+""
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:33:55) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i] !="A" or a[i]!="a"):
		b = b+a[i]
	else:
		b = b+""
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:34:28) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i] !="A"):
		b = b+a[i]
	if(a[i] != "a"):
		b = b+a[i]
	else:
		b = b+""
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:34:44) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i] !="A"):
		b = b+a[i]
	if(a[i] != "a"):
		b = b+a[i]
	else:
		b = b+""
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:34:54) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(1,len(a)):
	if(a[i] !="A"):
		b = b+a[i]
	if(a[i] != "a"):
		b = b+a[i]
	else:
		b = b+""
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:35:33) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i] !="A"):
		b = b+a[i]
	if(a[i] != "a"):
		b = b+a[i]
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:36:56) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i] !="A"):
		b = b+a[i]
	elif(a[i] != "a"):
		b = b+a[i]
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:38:17) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i]=="a"):
		b = b+""
	elif(a[i]=="A"):
		b = b+""
	else:
		b = b+a[i]
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:38:28) 
-- CODE:
from numpy import *
a = input()
b = ""
for i in range(0,len(a)):
	if(a[i]=="a"):
		b = b+""
	elif(a[i]=="A"):
		b = b+""
	else:
		b = b+a[i]
	
print(b)
-- EXECUTION TIME:
1.00524
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
